--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-p, a {
+p, a, form {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
 }
@@ -11,6 +11,11 @@ p, a {
 
 a {
     text-decoration: none;
+}
+
+a:hover {
+    color: #373737;
+    transition: .5s;
 }
 
 body {
@@ -26,8 +31,7 @@ header {
     align-items: center;
     width: 100%;
     background: white;
-    height: 98px;
-    box-shadow: 0px 0px 10px 0px grey;
+    border-bottom: 1px solid #cccccc;
 }
 
 .width-restraint {
@@ -43,11 +47,6 @@ header h1 {
     color: white;
     background: #4aaaa5;
     margin: 0px;
-    margin-top: 13px;
-}
-
-nav {
-    margin-top: 13px;
 }
 
 nav ul{
@@ -66,7 +65,7 @@ section {
     margin-bottom: 30px;
     width: 960px;
     background: white;
-    height: 520px;
+    /* height: 520px; */
     border-radius: 5px;
     /* box-shadow: 0px 0px 4px 0px grey; */
 }
@@ -98,10 +97,10 @@ footer {
     align-items: center;
     border-top: 8px solid #4aaaa5;
     background-color: #666666;
-    height: 100px;
-    margin-top: 162px;
+    margin-top: 12%;
 }
 
 footer p {
     color: white;
+    padding: 21px 0px;
 }
