--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -31,5 +31,21 @@ textarea::placeholder {
     height: 200px;
 }
 
-.button
+.button {
+    color: white;
+    background-color: #4aaaa5;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    padding: 15px 20px;
+}
 
+.button:hover {
+    cursor: pointer;
+    background-color: #50B7B1;
+}
+
+.button a {
+    color: white;
+}
