portfolio site done for now

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ nav ul li {
 section {
     margin: 0 auto;
     margin-top: 40px;
-    margin-bottom: 30px;
+    margin-bottom: 12.5%;
     width: 960px;
     background: white;
     /* height: 520px; */
