--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,28 +1,57 @@
-.portfolio-block {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 150px;
+section {
+    /* display: flex; */
 }
 
-.portfolio-block p {
+.row {
+    display: flex;
+    flex-direction: row;
+    padding: 40px 0;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    align-items: center;
+}
+
+.portfolio-block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.portfolio-block img {
+    width: 200px;
+    margin: 0;
+}
+
+.text {
+    margin-top: 40px;
+    text-align: center;
+    background-color: #4aaaa5;
+    position: absolute;
+    width: 100%;
+}
+
+.text p {
+    margin: 0;
+    padding: 10px 0px;
+    color: white;
+}
+
+.port-block-position {
+    display: flex;
+    align-items: center;
+    position: relative;
+    width: 200px;
+}
+
+/* .portfolio-block h2 {
     position: absolute;
     z-index: 1;
-    text-align: center;
-    color: white;
-    margin-top: 40px;
-    background-color: #4aaaa5;
-    width: 200px;
-    padding: 10px 0;
 }
 
 .portfolio-block img {
     position: relative;
-    margin-right: 0;
-}
-
-.portfolio-positioning {
-    display: flex;
-    padding: 2% 5%;
-    justify-content: space-around;
-}
+} */
